src/test/ui/compile-fail-migration/export-tag-variant.stderr
error[E0603]: enum `y` is private
  --> $DIR/export-tag-variant.rs:17:21
   |
LL | fn main() { let z = foo::y::y1; } //~ ERROR: enum `y` is private
   |                     ^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0603`.
